Second push into the tasks repository for review.